# nnunet_docker

./: .pdm-python  Dockerfile  LICENSE  README.md  TODO  entrypoint-with-docker.sh  entrypoint.sh  model-serve-spec.yaml  pyproject.toml  requirements-docker.txt  requirements.txt  run-example.sh
assets/: helptext-docker.txt  helptext.txt  separator-end.txt
dockerfiles/: aggressive_lesion.Dockerfile  prostate_zones.Dockerfile  whole_prostate.Dockerfile
metadata_templates/: empty-segment.json  hcc-frac.json  prostate-aggressive-lesion-frac.json  prostate-aggressive-lesion.json  prostate-lesion-frac.json  prostate-lesion.json  prostate-zones.json  whole-prostate.json
static/: fe.py  index.html
static/css/: style.css
utils/: __init__.py  change_params_in_ckpt.py  dicom_series_to_volume.py  entrypoint-prod.py  entrypoint-with-docker.py  entrypoint.py  nnunet_serve.py  nnunet_serve_utils.py  prepare_for_nnunet.py  pydicom_seg_writers.py  retrieve-extension.py  retrieve-spacing.py  rtstruct_writers.py  utils.py  volume_to_dicom_seg.py
