[project]
name = "nnunet_docker"
version = "0.1.0"
description = "Tools to distribute and deploy nnUNet."
authors = [
    {name = "José Guilherme de Almeida", email = "jose.almeida@research.fchampalimaud.org"},
]
dependencies = [
    "pydicom==2.4.2",
    "pydicom-seg==0.4.1",
    "SimpleITK==2.2.1",
    "nnunetv2==2.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
